--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
   - pip install -r requirements.txt
   - python manage.py migrate
 script:
-  - codecov manage.py test
+  - coverage run manage.py test
 after_success:
   - codecov
