--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-django >=1.11.1
-django_forms_bootstrap >=3.1.0
+django>=1.11.1
+django_forms_bootstrap>=3.1.0
 django-static-precompiler
-Pillow >=4.1.1
-codecov >=2.0.9
+Pillow>=4.1.1
+codecov>=2.0.9
+django-autocomplete-light
