--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
   - 3.6
 install:
   - pip install -r requirements.txt
+  - python manage.py makemigrations core
   - python manage.py migrate
 script:
   - coverage run manage.py test
