--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ name = "pypi"
 [packages]
 
 django = "*"
-django-autocomplete-light = "==3.3.0-rc6"
+django-autocomplete-light = ">=3.3.0-rc6"
 django-forms-bootstrap = "*"
 django-static-precompiler = "*"
 six = "*"
@@ -19,6 +19,7 @@ gunicorn = "*"
 django-crispy-forms = "*"
 django-ordered-model = "*"
 "bs4" = "*"
+django-imagekit = "*"
 
 
 [dev-packages]
