--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ name = "pypi"
 [packages]
 
 django = "*"
-django-autocomplete-light = ">=3.3.0-rc6"
+django-autocomplete-light = "*"
 django-forms-bootstrap = "*"
 django-static-precompiler = "*"
 six = "*"
