im none too bright, lets do this again

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ django-ordered-model = "*"
 django-imagekit = "*"
 django-model-utils = "*"
 requests = "*"
+django-el-pagination = "*"
 
 [dev-packages]
 ipython = "*"
