increased permissions for uploaders of content

--- a/silverchips/secure_settings.py.example
+++ b/silverchips/secure_settings.py.example
@@ -5,7 +5,7 @@
 import os
 from .settings import BASE_DIR
 
-SECRET_KEY = 'phm=9oy0g*dn!e_5_gz^*anehn)w(5x$d-3e0_-$pec6xcy2_x'
+SECRET_KEY = "phm=9oy0g*dn!e_5_gz^*anehn)w(5x$d-3e0_-$pec6xcy2_x"
 
 DEBUG = True
 
@@ -16,9 +16,8 @@ ALLOWED_HOSTS = ["*"]
 # https://docs.djangoproject.com/en/1.9/ref/settings/#databases
 
 DATABASES = {
-    'default': {
-        'ENGINE': 'django.db.backends.sqlite3',
-        'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),
+    "default": {
+        "ENGINE": "django.db.backends.sqlite3",
+        "NAME": os.path.join(BASE_DIR, "db.sqlite3"),
     }
 }
-
