--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,11 @@ services:
         container_name: silverchips_site
         depends_on:
             - db
+        deploy:
+            restart_policy:
+                condition: on-failure
+                delay: 10s
+                max_attempts: 3
         expose:
             - "8080"
         ports:
@@ -20,3 +25,14 @@ services:
         expose:
             - "5432"
         stop_grace_period: 3s
+        volumes:
+            - type: bind
+              source: ./sco.sql
+              target: /docker-entrypoint-initdb.d/sco.sql
+              read_only: true
+            - type: volume
+              source: scodb
+              target: /var/lib/postgresql/data
+
+volumes:
+    scodb:
